#1: updated README.md file

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,5 @@ _site/
 # ---------------------------------------------------------------------------
 # End of file
 # ---------------------------------------------------------------------------
+
+/.quarto/
